--- a/API/client/angular.json
+++ b/API/client/angular.json
@@ -64,6 +64,11 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "sslCert": "./ssl/serve.crt",
+            "sslKey": "./ssl/serve.key",
+            "ssl": true
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
