--- a/API/client/angular.json
+++ b/API/client/angular.json
@@ -65,8 +65,8 @@
         },
         "serve": {
           "options": {
-            "sslCert": "./ssl/serve.crt",
-            "sslKey": "./ssl/serve.key",
+            "sslCert": "./ssl/server.crt",
+            "sslKey": "./ssl/server.key",
             "ssl": true
           },
           "builder": "@angular-devkit/build-angular:dev-server",
