--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,6 +8,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
   },
-   "TokeKey": "super secret unguessable key"
+   "TokenKey": "super secret unguessable key"
   
 }
